# telefono-casa

./: Cargo.toml  DESIGN.md  ENTITIES.md  LINKS.md  README.md  USERSTORIES.md  flake.nix  package-lock.json  package.json
dnas/telefono_casa/workdir/: dna.yaml
dnas/telefono_casa/zomes/coordinator/householding/: Cargo.toml
dnas/telefono_casa/zomes/coordinator/householding/src/: all_households.rs  householder.rs  lib.rs
dnas/telefono_casa/zomes/coordinator/houseseeking/: Cargo.toml
dnas/telefono_casa/zomes/coordinator/houseseeking/src/: all_houseseekers.rs  (+2 more)
dnas/telefono_casa/zomes/coordinator/profile/: Cargo.toml
dnas/telefono_casa/zomes/integrity/householding/: Cargo.toml
dnas/telefono_casa/zomes/integrity/houseseeking/: Cargo.toml
dnas/telefono_casa/zomes/integrity/profile/: Cargo.toml
tests/src/telefono_casa/householding/: all-households.test.ts  common.ts  householder.test.ts
tests/src/telefono_casa/houseseeking/: all-houseseekers.test.ts  common.ts  houseseeker.test.ts
tests/src/telefono_casa/profile/: common.ts  user-profile.test.ts
ui/: package.json
ui/src/: App.tsx  HoldingPage.tsx  Routing.tsx  SeekingPage.tsx  main.tsx  usePolling.ts
ui/src/telefono_casa/householding/: AllHouseholds.tsx  CreateHouseholder.tsx  EditHouseholder.tsx  HouseholderDetail.tsx  types.ts
ui/src/telefono_casa/houseseeking/: AllHouseseekers.tsx  CreateHouseseeker.tsx  EditHouseseeker.tsx  HouseseekerDetail.tsx  types.ts
ui/src/telefono_casa/profile/: CreateUserProfile.tsx  EditUserProfile.tsx  UserProfileDetail.tsx  types.ts
workdir/: happ.yaml  web-happ.yaml
(+8 files in other folders)
